tests/expectations/compiler/statements/typecheck_statements_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ['''
Error [ETYC0372003]: Expected type `i16` but type `i32` was found
    --> compiler-test:5:33
     |
   5 |         let c1 : u32 = 123i16 * 123i32;
     |                                 ^^^^^^
Error [ETYC0372003]: Expected type `i16` but type `u32` was found
    --> compiler-test:5:24
     |
   5 |         let c1 : u32 = 123i16 * 123i32;
     |                        ^^^^^^^^^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:6:24
     |
   6 |         let c2 : u32 = "123i32" * 123i16 * "sss";
     |                        ^^^^^^^^
Error [ETYC0372003]: Expected type `i16` but type `string` was found
    --> compiler-test:6:24
     |
   6 |         let c2 : u32 = "123i32" * 123i16 * "sss";
     |                        ^^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:6:44
     |
   6 |         let c2 : u32 = "123i32" * 123i16 * "sss";
     |                                            ^^^^^
Error [ETYC0372003]: Expected type `i16` but type `string` was found
    --> compiler-test:6:44
     |
   6 |         let c2 : u32 = "123i32" * 123i16 * "sss";
     |                                            ^^^^^
Error [ETYC0372003]: Expected type `i16` but type `u32` was found
    --> compiler-test:6:24
     |
   6 |         let c2 : u32 = "123i32" * 123i16 * "sss";
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:7:24
     |
   7 |         let c3 : u32 = "123i32" * "sss";
     |                        ^^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:7:35
     |
   7 |         let c3 : u32 = "123i32" * "sss";
     |                                   ^^^^^
Error [ETYC0372003]: Expected type `field, group, integer, or scalar` but type `string` was found
    --> compiler-test:7:24
     |
   7 |         let c3 : u32 = "123i32" * "sss";
     |                        ^^^^^^^^
Error [ETYC0372003]: Expected type `field, group, integer, or scalar` but type `string` was found
    --> compiler-test:7:35
     |
   7 |         let c3 : u32 = "123i32" * "sss";
     |                                   ^^^^^
Error [ETYC0372003]: Expected type `i8` but type `i16` was found
    --> compiler-test:8:30
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                              ^^^^
Error [ETYC0372003]: Expected type `i8` but type `i32` was found
    --> compiler-test:8:37
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                                     ^^^^
Error [ETYC0372003]: Expected type `i8` but type `i64` was found
    --> compiler-test:8:44
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                                            ^^^^
Error [ETYC0372003]: Expected type `i8` but type `u8` was found
    --> compiler-test:8:51
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                                                   ^^^
Error [ETYC0372003]: Expected type `i8` but type `u16` was found
    --> compiler-test:8:57
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                                                         ^^^^
Error [ETYC0372003]: Expected type `i8` but type `u32` was found
    --> compiler-test:8:64
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                                                                ^^^^
Error [ETYC0372003]: Expected type `i8` but type `u64` was found
    --> compiler-test:8:71
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                                                                       ^^^^
Error [ETYC0372003]: Expected type `i8` but type `u32` was found
    --> compiler-test:8:24
     |
   8 |         let c4 : u32 = 1i8 * 2i16 * 3i32 * 4i64 * 5u8 * 6u16 * 7u32 * 9u64;
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:9:26
     |
   9 |         let c16: bool = ("123i32" & 123i16) == ("sss" / 1i8 - 1i8 + 22u32);
     |                          ^^^^^^^^
Error [ETYC0372003]: Expected type `i16` but type `string` was found
    --> compiler-test:9:26
     |
   9 |         let c16: bool = ("123i32" & 123i16) == ("sss" / 1i8 - 1i8 + 22u32);
     |                          ^^^^^^^^^^^^^^^^^
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:9:49
     |
   9 |         let c16: bool = ("123i32" & 123i16) == ("sss" / 1i8 - 1i8 + 22u32);
     |                                                 ^^^^^
Error [ETYC0372003]: Expected type `i8` but type `string` was found
    --> compiler-test:9:49
     |
   9 |         let c16: bool = ("123i32" & 123i16) == ("sss" / 1i8 - 1i8 + 22u32);
     |                                                 ^^^^^^^^^^^
Error [ETYC0372003]: Expected type `i8` but type `string` was found
    --> compiler-test:9:49
     |
   9 |         let c16: bool = ("123i32" & 123i16) == ("sss" / 1i8 - 1i8 + 22u32);
     |                                                 ^^^^^^^^^^^^^^^^^
Error [ETYC0372003]: Expected type `u32` but type `string` was found
    --> compiler-test:9:49
     |
   9 |         let c16: bool = ("123i32" & 123i16) == ("sss" / 1i8 - 1i8 + 22u32);
     |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
''']
